# ilo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MANIFESTO.md  PRIVACY.md  PR_BODY.md  README.md  SPEC.md  TODO.md  ai.txt  build.rs  spec-ai.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  rust.yml
docs/: marketplace-status.md
examples/: 01-simple-function.ilo  02-with-dependencies.ilo  03-data-transform.ilo  04-tool-interaction.ilo  05-workflow.ilo  aot-wrapper-strip.ilo  arithmetic.ilo  at-float-index.ilo  at-hd-tl-oob-parity.ilo  at-indexing.ilo  autorun-main.ilo  backslash-lambda-hint.ilo  bang-propagation-result.ilo  bangbang-panic-unwrap.ilo  bare-bang-rejected.ilo  bare-fmt-warns.ilo  bare-mut-warns.ilo  benchmark-graph.sh  bool-ternary.ilo  builtin-binding-name-rename.ilo  builtin-bridge.ilo  builtin-fn-name-rename.ilo  builtins-as-hof.ilo  builtins.ilo  camel-fields.ilo  chained-nilcoalesce.ilo  chars.ilo  chunks.ilo  clamp.ilo  cli-arity-strict.ilo  cli-text-arg.ilo  closure-bind.ilo  comment-above-call.ilo  cond-multi-stmt-guard-return.ilo  cond-vs-ret.ilo  cranelift-error-span.ilo  cranelift-panic-fallback.ilo  csv-tsv-writer.ilo  ct-count-by-predicate.ilo  cumsum.ilo  (+149 more)
npm/: package.json
pi/: .gitignore  README.md  package.json
pi/extensions/: ilo.ts
research/: BUILDING-A-LANGUAGE.md  CONTROL-FLOW.md  DATA-MANIPULATION.md  JOURNEY.md  LLM-INTEGRATION.md  OPEN.md  README-RESEARCH.md  TODO.md  agent-framework-tool-mechanics.md  coding-agents-research.md  comment-syntax.md  data-munging-languages.md  error-messages-research.md  essential-packages-analysis.md  go-stdlib-research.md  jit-backends.md  js-ts-ecosystem.md  lua-elixir-research.md  mcp-protocol-research.md  mutable-variables.md  playwright-for-ilo.md  python-data-analysis.md  python-stdlib-analysis.md  ruby-php-research.md  rust-capabilities-research.md  shell-languages-research.md  swift-kotlin-research.md  universal-stdlib-gaps.md  web-runner.md
research/bench/: run.sh
research/explorations/: bench-realistic.sh
scripts/: bump-version.sh
skills/ilo/: MANUAL_TESTS.md  SKILL.md
src/: builtins.rs  graph.rs  lib.rs  main.rs  verify.rs
src/ast/: mod.rs
src/cli/: args.rs
src/codegen/: explain.rs  fmt.rs  mod.rs  python.rs
src/diagnostic/: mod.rs  registry.rs
src/interpreter/: json.rs  mod.rs
src/lexer/: mod.rs
tests/: bump_version_script.rs  cli_integration.rs  cli_run_flag_placement.rs  errors.rs  eval_inline.rs  examples.rs  examples_engines.rs  http.rs  marketplace_integration.rs  regression_add_ss_aliasing.rs  regression_aot_wrapper_strip.rs  regression_async_tool.rs  regression_at_builtin.rs  regression_at_string.rs  regression_bangbang.rs  regression_bare_bang_nil.rs  regression_bool_ternary_brace.rs  regression_bool_ternary_prefix.rs  regression_builtin_binding_name.rs  regression_builtin_bridge.rs  regression_builtin_fn_name.rs  regression_builtins_as_hof.rs  regression_camelcase_dot.rs  regression_chars.rs  regression_chunks.rs  regression_clamp.rs  regression_cli_arity_silent_corruption.rs  regression_cli_default.rs  regression_cli_text_arg.rs  regression_closure_bind.rs  regression_comment_parse_corrupt.rs  regression_consecutive_regs.rs  regression_cranelift_error_span.rs  regression_cranelift_panic_fallback.rs  regression_csv_tsv_writer.rs  regression_ct.rs  regression_cumsum.rs  regression_datetime.rs  regression_dot_keywords.rs  regression_dot_list_index.rs  (+112 more)
(+93 files in other folders)
