[package]
name = "ilo"
version = "0.4.0"
edition = "2024"
description = "ilo — a programming language for AI agents"
license = "MIT"
repository = "https://github.com/danieljohnmorris/ilo-lang"
homepage = "https://github.com/danieljohnmorris/ilo-lang"
authors = ["Daniel John Morris"]
keywords = ["language", "ai", "interpreter", "compiler", "vm"]
categories = ["compilers", "command-line-utilities"]
readme = "README.md"

[features]
default = ["cranelift", "http"]
http = ["dep:minreq"]
cranelift = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native", "dep:target-lexicon"]
llvm = ["dep:inkwell"]

[dependencies]
logos = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
libc = "0.2"
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-native = { version = "0.116", optional = true }
target-lexicon = { version = "0.12", optional = true }
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }
minreq = { version = "2.14", default-features = false, optional = true }
fastrand = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
